--- a/src/renderer/css/global.css
+++ b/src/renderer/css/global.css
@@ -71,19 +71,15 @@
 /* Misc variables */
 :root {
   --button-shadow:
-    inset 0px 0px 0px 1px hsla(0, 0, 100, 0.1), inset 0px 0px 16px hsla(260, 95, 70, 0.1),
-    inset 0px 1px 0px hsla(260, 95, 70, 0.5);
+    inset 0px 0px 0px 1px hsla(0, 0%, 100%, 0.1), inset 0px 0px 16px hsla(260, 95%, 70%, 0.1),
+    inset 0px 1px 0px hsla(260, 95%, 70%, 0.5);
 
   --squish-button-shadow:
-    inset 0px 0px 0px 1px hsla(0, 0, 100, 0.15), inset 0px 0px 16px hsla(260, 95, 70, 0.1),
-    inset 0px 1px 0px hsla(260, 95, 70, 0.5), 0px 2px 2px hsla(0, 0, 0, 0.5),
-    0px 0px 16px hsla(260, 88, 54, 0.25), 0px 0px 40px hsla(260, 88, 54, 0.4);
+    inset 0px 0px 0px 1px hsla(0, 0%, 100%, 0.15), inset 0px 0px 16px hsla(260, 95%, 70%, 0.1),
+    inset 0px 1px 0px hsla(260, 95%, 70%, 0.5), 0px 2px 2px hsla(0, 0%, 0%, 0.5),
+    0px 0px 16px hsla(260, 88%, 54%, 0.25), 0px 0px 40px hsla(260, 88%, 54%, 0.4);
 
-  --squishing-shadow: 0px 0px 16px hsla(260, 88, 54, 0.25), 0px 0px 40px hsla(260, 88, 54, 0.4);
-}
-
-.button-shadow {
-  box-shadow: var(--button-shadow) !important;
+  --squishing-shadow: 0px 0px 16px hsla(260, 88%, 54%, 0.25), 0px 0px 40px hsla(260, 88%, 54%, 0.4);
 }
 
 .drag-bar {
